# wasm_game

./: example.css  example.html  example.js  package.json
src/: Cargo.toml
src/a_frist_shader/: Cargo.toml
src/a_frist_shader/src/: app.rs  lib.rs  triangle.rs
src/a_frist_shader/src/resources/: shader.frag
src/binding_events/: Cargo.toml
src/binding_events/src/: app.rs  lib.rs
src/binding_textures/: Cargo.toml
src/binding_textures/src/: app.rs  lib.rs  quad.rs
src/binding_textures/src/resources/: shader.frag
src/build_and_loading_wasm/: Cargo.toml
src/build_and_loading_wasm/src/: lib.rs
src/cancel_load_animation/: Cargo.toml
src/cancel_load_animation/src/: lib.rs
src/fixing_the_resolution/: Cargo.toml
src/fixing_the_resolution/src/: app.rs  triangle.rs
src/passing_in_uniforms/: Cargo.toml
src/passing_in_uniforms/src/: app.rs  lib.rs  quad.rs
src/passing_in_uniforms/src/resources/: shader.frag  shader.vert
src/swoop_10_engine_trails/: Cargo.toml
src/swoop_10_engine_trails/src/: app.rs  engine_trail.rs  engine_trail_sprite.rs  ship.rs  transform.rs
src/swoop_10_engine_trails/src/resources/: map.frag
src/swoop_11_wingtip_trails_and_optimizations/: Cargo.toml
src/swoop_11_wingtip_trails_and_optimizations/src/: ai.rs  app.rs  camera.rs  engine_trail.rs  engine_trail_sprite.rs  lib.rs  map.rs  map_sprite.rs  physics.rs  ship.rs  ship_sprite.rs  transform.rs
src/swoop_11_wingtip_trails_and_optimizations/src/resources/: map.frag
src/swoop_1_drawing_the_player/: Cargo.toml
src/swoop_1_drawing_the_player/src/: app.rs  lib.rs  ship_sprite.rs
src/swoop_2_drawing_the_map/: Cargo.toml
src/swoop_2_drawing_the_map/src/: app.rs  lib.rs  map_sprite.rs  texture.rs
src/swoop_2_drawing_the_map/src/resources/: map_fourier_1.frag  map_visualized.frag
src/swoop_3_ship_motion_physics/: Cargo.toml
src/swoop_3_ship_motion_physics/src/: app.rs  lib.rs  ship.rs  ship_sprite.rs
src/swoop_3_ship_motion_physics/src/resources/: map_circle_2.frag  map_coords.frag
src/swoop_4_keyboard_input/: Cargo.toml
src/swoop_4_keyboard_input/src/: app.rs  keymap.rs  lib.rs  map_sprite.rs  ship.rs  transform.rs
src/swoop_4_keyboard_input/src/resources/: map_circle_1.frag
src/swoop_5_collision_physics/: Cargo.toml
src/swoop_5_collision_physics/src/: app.rs  lib.rs  map.rs  map_sprite.rs  physics.rs  transform.rs
src/swoop_5_collision_physics/src/resources/: map.frag
src/swoop_6_ship_spawn_points/: Cargo.toml
src/swoop_6_ship_spawn_points/src/: app.rs  map.rs  map_sprite.rs
src/swoop_7_map_generation/: Cargo.toml
src/swoop_7_map_generation/src/: app.rs  lib.rs  map.rs  ship.rs  transform.rs
src/swoop_8_camera_positioning/: Cargo.toml
src/swoop_8_camera_positioning/src/: app.rs  camera.rs  lib.rs  shader.rs
src/swoop_8_camera_positioning/src/resources/: map.frag  map.vert
src/swoop_9_enemy_racers/: Cargo.toml
src/swoop_9_enemy_racers/src/: app.rs  camera.rs  lib.rs  map.rs  map_sprite.rs  transform.rs
