[package]
name = "swoop_2_drawing_the_map"
version = "0.1.0"
authors = ["pj_zhong <pj_zhong@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.63"
js-sys="0.3.40"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Url",
    "Document",
    "Event",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyEvent",
    "MouseEvent",
    "Performance",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlProgram",
    "WebGlUniformLocation",
    "HtmlImageElement",
    "Blob",
    "BlobPropertyBag",
    "Window",
]